# zarrs_ffi

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  globals.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  zarrs.h  zarrs_8h.html  zarrs_8h.js  zarrs_8h_source.html
.github/workflows/: artifacts.yml  ci.yml
examples/: CMakeLists.txt  Dockerfile  Findzarrs.cmake  README.md  array_write_read.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  enumvalues_0.js  functions_0.js  typedefs_0.js
src/: array.rs  config.rs  group.rs  lib.rs  storage.rs  version.rs
src/array/: array_read.rs  array_read_write.rs  array_sharded.rs  array_write.rs
src/group/: group_write.rs
tests/: array.rs  array_read.cpp
